# steering-reliability

./: .gitignore  APPLICATION_CHECKLIST.md  BASELINE_PACK_MEDIUM_GUIDE.md  BASELINE_PACK_README.md  COLAB_WORKFLOW.md  DATA_VERIFICATION.md  EXECUTIVE_SUMMARY.md  EXECUTIVE_SUMMARY_WITH_CITATIONS.md  EXPERIMENT_LADDER.md  GPT2_SMALL_GUIDE.md  LLAMA_MISTRAL_GUIDE.md  MATS_APPLICATION.md  MATS_APPLICATION_FINAL.md  MISTRAL_REPLICATION_GUIDE.md  PROJECT_SUMMARY.md  README.md  colab_baseline_pack.ipynb  colab_baseline_pack_llama2.ipynb  colab_baseline_pack_medium.ipynb  colab_baseline_pack_mistral.ipynb  colab_cells_v2.txt  colab_experiment.ipynb  colab_full_experiment.ipynb  colab_install_fix.txt  colab_mistral_full_replication.ipynb  pyproject.toml  steering_reliability_full_plan.md
artifacts 2/tables/: summary.csv
artifacts 3/baselines/: baseline_pack_results.parquet  baseline_pack_summary.csv  benign_contrast_layer10.json  benign_contrast_layer10.pt  learned_layer10.json  learned_layer10.pt  shuffled_layer10.json  shuffled_layer10.pt
configs/: alpha_sweep.yaml  default.yaml  full.yaml  gpt2_medium_baseline_pack.yaml  gpt2_small_alpha_sweep.yaml  gpt2_small_full.yaml  gpt2_small_layer_test.yaml  gpt2_small_smoke.yaml  layer_test.yaml  llama2_7b_baseline_pack.yaml  mistral_7b_baseline_pack.yaml  mistral_intervention_comparison.yaml  mistral_layer_sweep.yaml  quick_layer_test.yaml  quick_test.yaml  smoke.yaml
notebooks/: 01_smoke_test.py  02_full_sweep.py  03_analysis.py
scripts/: make_plots.py  make_prompts.py  run_all.py  run_baseline_pack.py
(+58 files in other folders)
